--- a/index.html
+++ b/index.html
@@ -157,12 +157,10 @@
         <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off">
         <label class="btn btn-outline-success" id="in-range-ok" style="display: none;" checked>OK</label> 
       </div>
-
-
     </form>
   </div>
+  <script type="module" src="main.js"></script>
+  <script type="module" src="https://deldmc.github.io/ValidationLibrary/validationLib.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
-  <script src="https://deldmc.github.io/ValidationLibrary/validationLib.js"></script>
 </body>
 </html>
