password function refactor

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 lock
               </span>
             </span>
-            <input type="text" id="password-input" class="form-control" aria-describedby="passwordHelpBlock" onclick="validatePassword()">
+            <input type="text" id="password-input" class="form-control" aria-describedby="passwordHelpBlock">
               <div class="invalid-feedback">
                 Please enter complex password.
               </div>
