--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ValidationLib</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
@@ -71,7 +71,7 @@
               call
             </span>
           </span>
-          <input type="text" placeholder="123-456-7891" class="form-control" id="phone-number-input" onclick="validatePhoneNumber()">
+          <input type="text" placeholder="123-456-7891" class="form-control" id="phone-number-input">
             <div class="invalid-feedback">
               Please enter valid phone number.
             </div>
@@ -94,7 +94,7 @@
               alternate_email
               </span>
             </span>
-            <input type="email" class="form-control" id="email-input" aria-describedby="inputGroupPrepend" onclick="validateEmail()">
+            <input type="email" class="form-control" id="email-input" aria-describedby="inputGroupPrepend">
             <div class="invalid-feedback">
               Please enter valid email.
             </div>
@@ -118,7 +118,7 @@
                 credit_card
               </span>
             </span>
-            <input class="form-control" type="text" id="credit-card-input" aria-describedby="inputGroupPrepend1" placeholder="0000 0000 0000 0000" onclick="validateCreditCard()">
+            <input class="form-control" type="text" id="credit-card-input" aria-describedby="inputGroupPrepend1" placeholder="0000 0000 0000 0000">
             <div class="invalid-feedback">
               Please provide a valid credit card number.
             </div>
@@ -141,9 +141,9 @@
                 pin
               </span>
             </span>
-            <input class="form-control" type="number" id="min-value" name="minValue" onclick="validateInRange()">
-            <input class="form-control" type="number" id="max-value" name="maxValue" onclick="validateInRange()">
-            <input class="form-control" type="number" id="value-to-check" name="valueToCheck" onclick="validateInRange()" placeholder="0">
+            <input class="form-control" type="number" id="min-value" name="minValue" >
+            <input class="form-control" type="number" id="max-value" name="maxValue" >
+            <input class="form-control" type="number" id="value-to-check" name="valueToCheck"  placeholder="0">
             <div class="invalid-feedback">
               Please provide min, max and value to check.
             </div>
