--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ValidationLib</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"  integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
   <header class="p-3 bg-primary-subtle text-primary-emphasis">
@@ -29,12 +29,12 @@
         </div>
       </div>
 
-      <div class="col-sm-6 align-bottom ">
+      <div class="col-sm-6 align-bottom">
         <input type="checkbox" class="btn-check" name="options-outlined"  autocomplete="off" >
         <label class="btn btn-outline-danger" id="empty-input-not-ok">NOT OK</label>
 
         <input type="checkbox" class="btn-check" name="options-outlined"  autocomplete="off" checked>
-        <label class="btn btn-outline-success" id="empty-input-ok" style="display: none;" checked>OK</label> 
+        <label class="btn btn-outline-success" id="empty-input-ok" style="display: none;" >OK</label> 
       </div>
 
       <div class="col-6 pt-3p">
@@ -102,7 +102,7 @@
       </div>
 
 
-      <div class="col-sm-6 align-bottom ">
+      <div class="col-sm-6 align-bottom">
         <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off" >
         <label class="btn btn-outline-danger" id="email-not-ok">NOT OK</label>
 
@@ -126,13 +126,13 @@
       </div>
 
       <div class="col-sm-6 align-bottom">
-        <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off" >
+        <input type="checkbox" class="btn-check" autocomplete="off" >
         <label class="btn btn-outline-danger" id="credit-card-not-ok">NOT OK</label>
 
-        <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off">
-        <label class="btn btn-outline-success" id="credit-card-ok" style="display: none;" checked>OK</label> 
+        <input type="checkbox" class="btn-check" autocomplete="off" checked>
+        <label class="btn btn-outline-success" id="credit-card-ok" style="display: none;">OK</label>
       </div>
-
+      
       <div class="col-sm-6 pt-3p">
         <label for="credit-card-input" class="form-label fb">Min.Value | Max.Value | Check in range</label>
           <div class="input-group has-validation">
@@ -154,13 +154,13 @@
         <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off" >
         <label class="btn btn-outline-danger" id="in-range-not-ok">NOT OK</label>
 
-        <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off">
-        <label class="btn btn-outline-success" id="in-range-ok" style="display: none;" checked>OK</label> 
+        <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off" checked>
+        <label class="btn btn-outline-success" id="in-range-ok" style="display: none;">OK</label> 
       </div>
     </form>
   </div>
   <script type="module" src="main.js"></script>
-  <script type="module" src="https://deldmc.github.io/ValidationLibrary/validationLib.js"></script>
+  <script type="module" src="https://deldmc.github.io/ValidationLibrary/app/validationLib.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
