code refactoring, combine logic to one function

--- a/app/index.html
+++ b/app/index.html
@@ -141,9 +141,9 @@
                 pin
               </span>
             </span>
-            <input class="form-control" type="number" id="min-value" name="minValue" >
-            <input class="form-control" type="number" id="max-value" name="maxValue" >
-            <input class="form-control" type="number" id="value-to-check" name="valueToCheck"  placeholder="0">
+            <input class="form-control" type="text" id="min-value" name="minValue" >
+            <input class="form-control" type="text" id="max-value" name="maxValue" >
+            <input class="form-control" type="text" id="value-to-check" name="valueToCheck"  placeholder="0">
             <div class="invalid-feedback">
               Please provide min, max and value to check.
             </div>
