code refactoring, combine logic to one function

--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,8 @@
   </header>
   <br><br>
   <div class="container">
-    <form class="row align-items-end" style="display: inline-flex; padding: 10px;">
-      <div class="col-sm-6">
+    <form class="row align-items-end form" style="padding: 10px;">
+      <div class="col-12 col-md-6">
         <label for="empty-field-input" class="form-label fb">Not empty field validation</label>
         <input type="text" class="form-control" id="empty-field-input">
         <div class="valid-feedback">
@@ -29,7 +29,7 @@
         </div>
       </div>
 
-      <div class="col-sm-6 align-bottom">
+      <div class="col-12 col-md-6 align-bottom">
         <input type="checkbox" class="btn-check" name="options-outlined"  autocomplete="off" >
         <label class="btn btn-outline-danger" id="empty-input-not-ok">NOT OK</label>
 
@@ -37,7 +37,7 @@
         <label class="btn btn-outline-success" id="empty-input-ok" style="display: none;" >OK</label> 
       </div>
 
-      <div class="col-6 pt-3p">
+      <div class="col-12 col-md-6 pt-3p">
         <label for="password-input" class="form-label fb">Password validation field</label>
           <div id="passwordHelpBlock" class="form-text">
             Your password must be at least 8 characters long, contain letters and numbers, lowercase, uppercase, special character
@@ -55,7 +55,7 @@
           </div>
       </div> 
 
-      <div class="col-sm-6 align-bottom" >
+      <div class="col-12 col-md-6 align-bottom" >
           <input type="checkbox" class="btn-check" name="options-outlined"  autocomplete="off" >
           <label class="btn btn-outline-danger" id="pass-not-ok">NOT OK</label>
 
@@ -63,7 +63,7 @@
           <label class="btn btn-outline-success" id="pass-ok" style="display: none;">OK</label>
       </div>
 
-      <div class="col-sm-6 pt-3p">
+      <div class="col-12 col-md-6 pt-3p">
         <label for="phone-number-input" class="form-label fb">Phone number validation</label>
         <div class="input-group has-validation">
           <span class="input-group-text" id="inputGroupPrepend">
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <div class="col-sm-6 align-bottom" >
+      <div class="col-12 col-md-6 align-bottom" >
         <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off" >
         <label class="btn btn-outline-danger" id="phone-number-not-ok">NOT OK</label>
 
@@ -86,7 +86,7 @@
         <label class="btn btn-outline-success" id="phone-number-ok" style="display: none;">OK</label>
       </div>
 
-      <div class="col-sm-6 pt-3p">
+      <div class="col-12 col-md-6 pt-3p">
         <label for="email-input" class="form-label fb">Validate Email</label>
           <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend">
@@ -102,7 +102,7 @@
       </div>
 
 
-      <div class="col-sm-6 align-bottom">
+      <div class="col-12 col-md-6 align-bottom">
         <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off" >
         <label class="btn btn-outline-danger" id="email-not-ok">NOT OK</label>
 
@@ -110,7 +110,7 @@
         <label class="btn btn-outline-success" id="email-ok" style="display: none;" checked>OK</label> 
       </div>
        
-      <div class="col-sm-6 pt-3p">
+      <div class="col-12 col-md-6 pt-3p">
         <label for="credit-card-input" class="form-label fb">Credit card validation field</label>
           <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend1">
@@ -125,7 +125,7 @@
           </div>
       </div>
 
-      <div class="col-sm-6 align-bottom">
+      <div class="col-12 col-md-6 align-bottom">
         <input type="checkbox" class="btn-check" autocomplete="off" >
         <label class="btn btn-outline-danger" id="credit-card-not-ok">NOT OK</label>
 
@@ -133,7 +133,7 @@
         <label class="btn btn-outline-success" id="credit-card-ok" style="display: none;">OK</label>
       </div>
       
-      <div class="col-sm-6 pt-3p">
+      <div class="col-12 col-md-6 pt-3p">
         <label for="credit-card-input" class="form-label fb">Min.Value | Max.Value | Check in range</label>
           <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend1">
@@ -150,7 +150,7 @@
           </div>
       </div>
 
-      <div class="col-sm-6 align-bottom">
+      <div class="col-12 col-md-6 align-bottom">
         <input type="checkbox" class="btn-check" name="options-outlined" autocomplete="off" >
         <label class="btn btn-outline-danger" id="in-range-not-ok">NOT OK</label>
 
